<resources>
    <string name="app_name">Tute03</string>
    <string name="tv_num1">Number 1</string>
    <string name="tv_num2">Number 2</string>
    <string name="et_num1" />
    <string name="et_num2" />
    <string name="btn_ok">OK</string>
    <string name="tv_answer" />
    <string name="btn_add">+</string>
    <string name="btn_substract">-</string>
    <string name="btn_multiply">*</string>
    <string name="btn_divide">/</string>
    <string name="et_toast">opening calculater</string>
</resources>