<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_num1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="143dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_num2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num1"
        app:layout_constraintStart_toEndOf="@+id/tv_num1"
        tools:text="@string/et_num1" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/et_num2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintStart_toEndOf="@+id/tv_num2" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="167dp"
        android:layout_height="75dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="92dp"
        android:text="@string/tv_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer" />

    <Button
        android:id="@+id/btn_subsract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:onClick="sub"
        android:text="@string/btn_substract"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintStart_toEndOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="64dp"
        android:onClick="multi"
        android:text="@string/btn_multiply"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:onClick="divide"
        android:text="@string/btn_divide"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_multiply"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply" />

</androidx.constraintlayout.widget.ConstraintLayout>